refactor component structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="root" data-config="3190947245348881579"
+  <div id="root"
     data-config-url="https://raw.githubusercontent.com/itokun99/itokun99/main/react-template-blogger/configs/3190947245348881579/config.json">
   </div>
 
