refactoring post detail to site widget with config

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="root"
-    data-config-url="https://raw.githubusercontent.com/itokun99/itokun99/main/react-template-blogger/configs/3190947245348881579/config.json">
+    data-config-url="https://raw.githack.com/itokun99/itokun99/main/react-template-blogger/configs/3190947245348881579/config.json">
   </div>
 
   <script type="module" src="/src/main.tsx"></script>
