--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Loading...</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Loading...</title>
-</head>
+  <body>
+    <div id="root" data-config-url="/config.json"></div>
 
-<body>
-  <div id="root"
-    data-config-url="https://raw.githack.com/itokun99/itokun99/main/react-template-blogger/configs/3190947245348881579/config.json">
-  </div>
-
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
